--- a/style.css
+++ b/style.css
@@ -182,6 +182,50 @@ h2{/*margin=0 implique qu'on enlève les marges de bases*/
     background-color: #f2f2f2; /* Gris clair par défaut */
 }
 
+
+
+.flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    border: 1px solid black;
+}
+
+.forecast-table {
+    max-width: 100%;
+    overflow: auto;
+}
+
+.current-weather {
+    text-align: center;
+    font-size: 24px;
+}
+.weather-details {
+    text-align: center;
+    font-size: 18px;
+}
+.forecast-table {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 60%;
+    border: 1px rgb(22, 17, 17);
+}
+.forecast-table th, .forecast-table td {
+    padding: 10px;
+    text-align: center;
+    max-width: 100%;
+    overflow: auto;
+}
+.forecast-table th {
+    background-color: #f2f2f2;
+    max-width: 100%;
+    overflow: auto;
+}
+
+
 .grid{
     border: 2px solid rgb(209, 209, 59);
     border-radius: 10px;
